--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id='content'></div>
-    <script src="./js/app.js"></script>  
+    <script> require('./app/App') </script>  
   </body>
 </html>
